[gd_scene load_steps=9 format=3 uid="uid://cr2u2sx2inagv"]

[ext_resource type="Script" path="res://steam_uploader.gd" id="1"]
[ext_resource type="Theme" uid="uid://cyoqo4r8mqjms" path="res://theme.tres" id="2"]
[ext_resource type="Texture2D" uid="uid://bb5bw05j5jjo6" path="res://icon.png" id="3"]
[ext_resource type="Texture2D" uid="uid://dxw12e6matnvo" path="res://icon_settings.svg" id="3_htvji"]
[ext_resource type="Texture2D" uid="uid://c4enxd7emx62v" path="res://icon_save.svg" id="4_3h5vt"]
[ext_resource type="Texture2D" uid="uid://28q0kfw2yblv" path="res://icon_user.svg" id="4_wc1py"]
[ext_resource type="Script" path="res://user_dialog.gd" id="7_epre1"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_gmo1l"]
content_margin_top = 8.0
content_margin_bottom = 8.0
bg_color = Color(0, 0, 0, 0.101961)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[node name="SteamUploader" type="PanelContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource("2")
script = ExtResource("1")

[node name="Form" type="VBoxContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 10

[node name="Title" type="HBoxContainer" parent="Form"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="Logo" type="TextureRect" parent="Form/Title"]
visible = false
layout_mode = 2
texture = ExtResource("3")
expand_mode = 1

[node name="TitleLabel" type="Label" parent="Form/Title"]
visible = false
layout_mode = 2
size_flags_horizontal = 3
theme_type_variation = &"LabelBig"
text = "Steam Upload GUI"

[node name="GitHubLinkButton" type="LinkButton" parent="Form/Title"]
layout_mode = 2
size_flags_vertical = 4
text = "v0.2 - GitHub"

[node name="CoffeeLinkButton" type="LinkButton" parent="Form/Title"]
layout_mode = 2
size_flags_vertical = 4
focus_mode = 2
text = "Buy me a coffee"

[node name="Control" type="Control" parent="Form/Title"]
layout_mode = 2
size_flags_horizontal = 3

[node name="SaveSettingsButton" type="Button" parent="Form/Title"]
layout_mode = 2
text = "Save Settings"
icon = ExtResource("4_3h5vt")
flat = true

[node name="SettingsCheckBox" type="Button" parent="Form/Title"]
unique_name_in_owner = true
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
toggle_mode = true
text = "Show Settings"
icon = ExtResource("3_htvji")
flat = true

[node name="SettingsGroup" type="VBoxContainer" parent="Form"]
unique_name_in_owner = true
layout_mode = 2

[node name="Label" type="Label" parent="Form/SettingsGroup"]
layout_mode = 2
theme_type_variation = &"LabelWhite"
text = "Enter path to \"tools\\ContentBuilder\" folder"

[node name="Dir" type="HBoxContainer" parent="Form/SettingsGroup"]
layout_mode = 2

[node name="DirDescr" type="Label" parent="Form/SettingsGroup/Dir"]
layout_mode = 2
text = "Path:"

[node name="ContentBuilderPathEdit" type="LineEdit" parent="Form/SettingsGroup/Dir"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "C:\\steam_sdk\\tools\\ContentBuilder"

[node name="OpenDirButton" type="Button" parent="Form/SettingsGroup/Dir"]
layout_mode = 2
text = "Open Folder"

[node name="PanelContainer" type="PanelContainer" parent="Form"]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_gmo1l")

[node name="AppsToUploadGroup" type="VBoxContainer" parent="Form/PanelContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Title" type="HBoxContainer" parent="Form/PanelContainer/AppsToUploadGroup"]
layout_mode = 2

[node name="SelectedAppsCheckBox" type="CheckBox" parent="Form/PanelContainer/AppsToUploadGroup/Title"]
unique_name_in_owner = true
layout_mode = 2
text = "Apps to Upload"
flat = true

[node name="Control" type="Control" parent="Form/PanelContainer/AppsToUploadGroup/Title"]
layout_mode = 2

[node name="AppFilter" type="LineEdit" parent="Form/PanelContainer/AppsToUploadGroup/Title"]
layout_mode = 2
placeholder_text = "filter"
clear_button_enabled = true

[node name="RefreshButton" type="Button" parent="Form/PanelContainer/AppsToUploadGroup/Title"]
layout_mode = 2
size_flags_horizontal = 10
text = "Refresh Apps"

[node name="ScrollContainer" type="ScrollContainer" parent="Form/PanelContainer/AppsToUploadGroup"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="CenterContainer" type="CenterContainer" parent="Form/PanelContainer/AppsToUploadGroup/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="AppsErrorMessage" type="RichTextLabel" parent="Form/PanelContainer/AppsToUploadGroup/ScrollContainer/CenterContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(500, 0)
layout_mode = 2
theme_override_constants/line_separation = 2
bbcode_enabled = true
text = "Welcome to Steam Upload GUI

Make sure you have:
- Entered the \"tools\\ContentBuilder\" path in the settings above
- Setup the correct vfd files in \"tools\\ContentBuilder\\scripts\"
- Logged in with your Steam parter account below

More information about how to set it up on the [url]github repo[/url]."
fit_content = true

[node name="AppsToUpload" type="VBoxContainer" parent="Form/PanelContainer/AppsToUploadGroup/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="UserCredentialsGroup" type="VBoxContainer" parent="Form"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Form/UserCredentialsGroup"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="Form/UserCredentialsGroup/HBoxContainer"]
layout_mode = 2
texture = ExtResource("4_wc1py")
stretch_mode = 5

[node name="SteamUserLabel" type="Label" parent="Form/UserCredentialsGroup/HBoxContainer"]
layout_mode = 2
text = "Login"

[node name="AddUsersButton" type="Button" parent="Form/UserCredentialsGroup"]
unique_name_in_owner = true
visible = false
layout_mode = 2
text = "Add Users "

[node name="UsersHbox" type="HBoxContainer" parent="Form/UserCredentialsGroup"]
unique_name_in_owner = true
layout_mode = 2

[node name="User" type="GridContainer" parent="Form/UserCredentialsGroup/UsersHbox"]
layout_mode = 2
size_flags_horizontal = 3
columns = 2

[node name="UserLabel" type="Label" parent="Form/UserCredentialsGroup/UsersHbox/User"]
layout_mode = 2
text = "User"

[node name="HBoxContainer" type="HBoxContainer" parent="Form/UserCredentialsGroup/UsersHbox/User"]
layout_mode = 2

[node name="UserSelectionButton" type="OptionButton" parent="Form/UserCredentialsGroup/UsersHbox/User/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="ManageUsersButton" type="Button" parent="Form/UserCredentialsGroup/UsersHbox/User/HBoxContainer"]
layout_mode = 2
text = " Manage Users "

[node name="PasswordLabel" type="Label" parent="Form/UserCredentialsGroup/UsersHbox/User"]
layout_mode = 2
text = "Password"

[node name="PW" type="HBoxContainer" parent="Form/UserCredentialsGroup/UsersHbox/User"]
layout_mode = 2
size_flags_horizontal = 3

[node name="UserPasswordEdit" type="LineEdit" parent="Form/UserCredentialsGroup/UsersHbox/User/PW"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
secret = true

[node name="PasswordMissing" type="Panel" parent="Form/UserCredentialsGroup/UsersHbox/User/PW/UserPasswordEdit"]
unique_name_in_owner = true
modulate = Color(1, 1, 1, 0.501961)
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2

[node name="CheckBox" type="CheckBox" parent="Form/UserCredentialsGroup/UsersHbox/User/PW"]
layout_mode = 2
text = "hide"
flat = true

[node name="SavePW" type="CheckBox" parent="Form/UserCredentialsGroup/UsersHbox/User/PW"]
unique_name_in_owner = true
layout_mode = 2
text = "save"
flat = true

[node name="Spacer3" type="Control" parent="Form/UserCredentialsGroup"]
layout_mode = 2

[node name="HBoxUpload" type="HBoxContainer" parent="Form/UserCredentialsGroup"]
layout_mode = 2
alignment = 1

[node name="UploadButton" type="Button" parent="Form/UserCredentialsGroup/HBoxUpload"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
theme_type_variation = &"ButtonUpload"
text = "Upload"

[node name="KeepShellOpen" type="CheckBox" parent="Form/UserCredentialsGroup/HBoxUpload"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
text = "Keep shell open (problem solving) "

[node name="SetSteamGuardButton" type="Button" parent="Form/UserCredentialsGroup/HBoxUpload"]
layout_mode = 2
text = "Set Steam Guard Code"

[node name="PopupLayer" type="CanvasLayer" parent="."]

[node name="FileDialog" type="FileDialog" parent="PopupLayer"]
mode = 2
size = Vector2i(331, 175)
theme = ExtResource("2")
access = 2
use_native_dialog = true

[node name="UserDialog" type="PopupPanel" parent="PopupLayer"]
unique_name_in_owner = true
auto_translate_mode = 1
size = Vector2i(395, 141)
visible = true
theme = ExtResource("2")
script = ExtResource("7_epre1")

[node name="MarginContainer" type="MarginContainer" parent="PopupLayer/UserDialog"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 4.0
offset_top = 4.0
offset_right = -4.0
offset_bottom = -4.0
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="VBoxContainer" type="VBoxContainer" parent="PopupLayer/UserDialog/MarginContainer"]
layout_mode = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="PopupLayer/UserDialog/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="SteamUserManagementLabel" type="Label" parent="PopupLayer/UserDialog/MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("2")
theme_type_variation = &"LabelBig"
text = "Steam User Management"
horizontal_alignment = 1

[node name="CloseUserManagementButton" type="Button" parent="PopupLayer/UserDialog/MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "X"

[node name="UserList" type="VBoxContainer" parent="PopupLayer/UserDialog/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="AddUserLabel" type="Label" parent="PopupLayer/UserDialog/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 10
theme_type_variation = &"LabelWhite"
text = "Add new Steam User"

[node name="HBoxContainer" type="HBoxContainer" parent="PopupLayer/UserDialog/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="AddUserNameLineEdit" type="LineEdit" parent="PopupLayer/UserDialog/MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Username"

[node name="AddUserButton" type="Button" parent="PopupLayer/UserDialog/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = " Add User "

[node name="HSeparator" type="HSeparator" parent="PopupLayer/UserDialog/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="SteamUploadingPopup" type="PopupPanel" parent="PopupLayer"]
unique_name_in_owner = true
theme = ExtResource("2")

[node name="SteamUploadLabel" type="Label" parent="PopupLayer/SteamUploadingPopup"]
unique_name_in_owner = true
offset_left = 4.0
offset_top = 4.0
offset_right = 306.0
offset_bottom = 96.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme_type_variation = &"LabelBig"
text = "Waiting for Content Builder and Upload."
horizontal_alignment = 1
vertical_alignment = 1

[node name="SteamGuardPopup" type="PopupPanel" parent="PopupLayer"]
unique_name_in_owner = true
theme = ExtResource("2")

[node name="Margin" type="MarginContainer" parent="PopupLayer/SteamGuardPopup"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 4.0
offset_top = 4.0
offset_right = -186.0
offset_bottom = -403.0

[node name="VBox" type="VBoxContainer" parent="PopupLayer/SteamGuardPopup/Margin"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="SteamGuardLabel" type="Label" parent="PopupLayer/SteamGuardPopup/Margin/VBox"]
layout_mode = 2
size_flags_horizontal = 3
text = "Enter Steam Guard code (received via mail)"
horizontal_alignment = 1
vertical_alignment = 2

[node name="HSeparator3" type="HSeparator" parent="PopupLayer/SteamGuardPopup/Margin/VBox"]
layout_mode = 2

[node name="Spacer2" type="Control" parent="PopupLayer/SteamGuardPopup/Margin/VBox"]
layout_mode = 2

[node name="SteamGuardCodeEdit" type="LineEdit" parent="PopupLayer/SteamGuardPopup/Margin/VBox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 6
max_length = 5

[node name="Spacer" type="Control" parent="PopupLayer/SteamGuardPopup/Margin/VBox"]
layout_mode = 2

[node name="SendSteamGuardButton" type="Button" parent="PopupLayer/SteamGuardPopup/Margin/VBox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
disabled = true
text = "Send"

[connection signal="pressed" from="Form/Title/GitHubLinkButton" to="." method="_on_GitHubLinkButton_pressed"]
[connection signal="pressed" from="Form/Title/CoffeeLinkButton" to="." method="_on_CoffeeLinkButton_pressed"]
[connection signal="pressed" from="Form/Title/SaveSettingsButton" to="." method="_on_SaveSettingsButton_pressed"]
[connection signal="toggled" from="Form/Title/SettingsCheckBox" to="." method="_on_SettingsCheckBox_toggled"]
[connection signal="pressed" from="Form/SettingsGroup/Dir/OpenDirButton" to="." method="_on_OpenDirButton_pressed"]
[connection signal="toggled" from="Form/PanelContainer/AppsToUploadGroup/Title/SelectedAppsCheckBox" to="." method="_on_SelectedAppsCheckBox_toggled"]
[connection signal="text_changed" from="Form/PanelContainer/AppsToUploadGroup/Title/AppFilter" to="." method="_on_AppFilter_text_changed"]
[connection signal="pressed" from="Form/PanelContainer/AppsToUploadGroup/Title/RefreshButton" to="." method="_on_RefreshButton_pressed"]
[connection signal="meta_clicked" from="Form/PanelContainer/AppsToUploadGroup/ScrollContainer/CenterContainer/AppsErrorMessage" to="." method="_on_apps_error_message_meta_clicked"]
[connection signal="pressed" from="Form/UserCredentialsGroup/AddUsersButton" to="." method="_on_ManageUsersButton_pressed"]
[connection signal="item_selected" from="Form/UserCredentialsGroup/UsersHbox/User/HBoxContainer/UserSelectionButton" to="." method="_on_UserSelectionButton_item_selected"]
[connection signal="pressed" from="Form/UserCredentialsGroup/UsersHbox/User/HBoxContainer/ManageUsersButton" to="." method="_on_ManageUsersButton_pressed"]
[connection signal="text_changed" from="Form/UserCredentialsGroup/UsersHbox/User/PW/UserPasswordEdit" to="." method="_on_UserPasswordEdit_text_changed"]
[connection signal="toggled" from="Form/UserCredentialsGroup/UsersHbox/User/PW/CheckBox" to="Form/UserCredentialsGroup/UsersHbox/User/PW/UserPasswordEdit" method="set_secret"]
[connection signal="pressed" from="Form/UserCredentialsGroup/UsersHbox/User/PW/SavePW" to="." method="_on_SavePW_pressed"]
[connection signal="pressed" from="Form/UserCredentialsGroup/HBoxUpload/UploadButton" to="." method="_on_UploadButton_pressed"]
[connection signal="toggled" from="Form/UserCredentialsGroup/HBoxUpload/KeepShellOpen" to="Form/UserCredentialsGroup/UsersHbox/User/PW/UserPasswordEdit" method="set_secret"]
[connection signal="pressed" from="Form/UserCredentialsGroup/HBoxUpload/SetSteamGuardButton" to="." method="_on_SetSteamGuardButton_pressed"]
[connection signal="dir_selected" from="PopupLayer/FileDialog" to="." method="_on_FileDialog_dir_selected"]
[connection signal="popup_hide" from="PopupLayer/SteamUploadingPopup" to="." method="_on_popup_hide"]
[connection signal="popup_hide" from="PopupLayer/SteamGuardPopup" to="." method="_on_popup_hide"]
[connection signal="text_changed" from="PopupLayer/SteamGuardPopup/Margin/VBox/SteamGuardCodeEdit" to="." method="_on_SteamGuardCodeEdit_text_changed"]
[connection signal="pressed" from="PopupLayer/SteamGuardPopup/Margin/VBox/SendSteamGuardButton" to="." method="_on_SendSteamGuardButton_pressed"]
